--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
+    "mongoose": "^5.6.6",
     "router": "^1.3.3",
     "routes": "^2.1.0"
   }
