--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.6.6",
     "router": "^1.3.3",
-    "routes": "^2.1.0"
+    "routes": "^2.1.0",
+    "validate.js": "^0.13.1"
   }
 }
