--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.6.6",
     "router": "^1.3.3",
     "routes": "^2.1.0",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "validator": "^11.1.0"
   }
 }
